feat: add purchase candidate alternate sizes
