# api/app/Models/PurchaseCandidate.php
@@ -33,6 +33,9 @@ class PurchaseCandidate extends Model
         'size_label',
         'size_note',
         'size_details',
+        'alternate_size_label',
+        'alternate_size_note',
+        'alternate_size_details',
         'spec',
         'is_rain_ok',
         'sheerness',
@@ -48,6 +51,7 @@ class PurchaseCandidate extends Model
         'sale_ends_at' => 'datetime',
         'discount_ends_at' => 'datetime',
         'size_details' => 'array',
+        'alternate_size_details' => 'array',
         'spec' => 'array',
         'shape' => 'string',
         'is_rain_ok' => 'boolean',
